# cuFFTStaticLinking_Intercept

./: README.md  buildall.sh  runFFT.sh  timer.h
1d_c2c/: 1d_c2c_example.cpp  CMakeLists.txt  Makefile  compile.sh  make_verbose.txt  make_without.txt  run.sh
1d_mgpu_c2c/: CMakeLists.txt
1d_r2c/: 1d_r2c_example.cpp  Makefile  run.sh
2d_c2r/: 2d_c2r_example.cpp  Makefile  run.sh
3d_c2c/: 3d_c2c_example.cpp  Makefile  run.sh
Interposer/: READme.md  compileInterposer.sh  intercept_cuda_launch_ptx.cpp  intercept_cuda_launch_ptx_allocator.cpp  intercept_cuda_launch_ptx_modified.cpp  intercept_cuda_launch_ptx_nat.cpp  klist.json  klist_fft.json  klist_original.json  parse_multiple_files.sh
Interposer/native_cufft_11.0/: append_include_117.sh  compile_all.sh  libcufft_static.10.sm_80.ptx  libcufft_static.100.sm_80.ptx  libcufft_static.102.sm_80.ptx  libcufft_static.103.sm_80.ptx  libcufft_static.104.sm_80.ptx  libcufft_static.105.sm_80.ptx  libcufft_static.106.sm_80.ptx  libcufft_static.108.sm_80.ptx  libcufft_static.109.sm_80.ptx  libcufft_static.11.sm_80.ptx  libcufft_static.110.sm_80.ptx  libcufft_static.111.sm_80.ptx  libcufft_static.113.sm_80.ptx  libcufft_static.114.sm_80.ptx  libcufft_static.115.sm_80.ptx  libcufft_static.116.sm_80.ptx  libcufft_static.117.sm_80.ptx  libcufft_static.118.sm_80.ptx  libcufft_static.119.sm_80.ptx  libcufft_static.12.sm_80.ptx  libcufft_static.120.sm_80.ptx  libcufft_static.121.sm_80.ptx  libcufft_static.122.sm_80.ptx  libcufft_static.123.sm_80.ptx  libcufft_static.124.sm_80.ptx  libcufft_static.128.sm_80.ptx  libcufft_static.129.sm_80.ptx  libcufft_static.13.sm_80.ptx  libcufft_static.131.sm_80.ptx  libcufft_static.133.sm_80.ptx  libcufft_static.136.sm_80.ptx  libcufft_static.137.sm_80.ptx  libcufft_static.138.sm_80.ptx  libcufft_static.139.sm_80.ptx  libcufft_static.14.sm_80.ptx  libcufft_static.140.sm_80.ptx  libcufft_static.141.sm_80.ptx  libcufft_static.142.sm_80.ptx  (+176 more)
